--- a/exam-after.ipynb
+++ b/exam-after.ipynb
@@ -14,10 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -31,17 +30,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:186: RRuntimeWarning: Loading tidyverse: ggplot2\n",
+      "Loading tidyverse: tibble\n",
+      "Loading tidyverse: tidyr\n",
+      "Loading tidyverse: readr\n",
+      "Loading tidyverse: purrr\n",
+      "Loading tidyverse: dplyr\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/opt/conda/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:186: RRuntimeWarning: Conflicts with tidy packages ---------------------------------------------------\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/opt/conda/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:186: RRuntimeWarning: filter(): dplyr, stats\n",
+      "lag():    dplyr, stats\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%%R\n",
     "\n",
@@ -50,45 +70,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Error in sort.list(y) : 'x' must be atomic for 'sort.list'\n",
+      "Have you called 'sort' on a list?\n"
+     ]
+    }
+   ],
    "source": [
     "%%R\n",
     "# make sure to get your data in the same folder, next to the notebook file\n",
     "# so that this will run!\n",
     "\n",
     "\n",
-    "dat <- read_csv('classification_data.csv')"
+    "dat <- read_csv('classification_data.csv')\n",
+    "factor(dat[\"label\"])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Error: Cannot add ggproto objects together. Did you forget to add this object to a ggplot object?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:186: RRuntimeWarning: Error: Cannot add ggproto objects together. Did you forget to add this object to a ggplot object?\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%%R\n",
+    "\n",
+    "library(dplyr)\n",
+    "\n",
     "\n",
     "# Your data consists of an \"X\" column and a \"label\" column\n",
     "# Use ggplot to plot a kernel density estimate of each label (overlayed on the same plot)\n",
     "# hint: don't forget to make sure the labels are factors!\n",
+    "geom_density(mapping = aes(dat[\"label\"]), data = dat[\"X\"]) + geom_density()\n",
     "\n"
    ]
   },
@@ -106,10 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 72,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -172,10 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 86,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -205,10 +254,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 88,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -220,15 +268,17 @@
     "# In your data, \"X\" is a data point that is nothing more than\n",
     "# a single number. \n",
     "# Shuffle your data into a random order (use random.shuffle!)\n",
-    "\n"
+    "import random as rd\n",
+    "\n",
+    "\n",
+    "rd.shuffle(dat)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 89,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -257,42 +307,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "300"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Split your data, which is now a list, into 2 sublists:\n",
     "# \"train\" and \"test\"\n",
     "# The \"train\" group should have 700 elements\n",
     "# The test group should have 300 elements\n",
     "# Each group should have the same format as the original data\n",
-    "\n"
+    "\n",
+    "train = dat[:700]\n",
+    "test = dat[700:1000]\n",
+    "\n",
+    "len(train)\n",
+    "len(test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'X'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-105-97dbcd7d8215>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# For each group (\"train\" and \"test\") split the X's from the labels.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtrainX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mtestX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtrainL\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'X'"
+     ]
+    }
+   ],
    "source": [
     "# Now you will need to make another split, within the groups!\n",
-    "# For each group (\"train\" and \"test\") split the X's from the labels."
+    "# For each group (\"train\" and \"test\") split the X's from the labels.\n",
+    "\n",
+    "trainX = train[]\n",
+    "testX = test[]\n",
+    "trainL = train[]\n",
+    "testL = test[]\n",
+    "\n",
+    "trainX"
    ]
   },
   {
@@ -309,24 +392,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 98,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Can't instantiate abstract class AbstractKNeighbors with abstract methods _make_prediction",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-98-d155abfde200>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# 1. Create an instance the class, with constructor parameters: K=5\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mmy_instance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAbstractKNeighbors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# 2. Train the instance on the \"train\" groups X's and labels (y's)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: Can't instantiate abstract class AbstractKNeighbors with abstract methods _make_prediction"
+     ]
+    }
+   ],
    "source": [
     "# For each model: \n",
     "# 1. Create an instance the class, with constructor parameters: K=5\n",
+    "\n",
+    "my_instance = AbstractKNeighbors(5)\n",
+    "\n",
     "# 2. Train the instance on the \"train\" groups X's and labels (y's)\n",
+    "\n",
+    "my_instance.fit(trainX,trainL)\n",
+    "\n",
     "# 3. Test how well the instance does: \n",
     "#    A. Use the trained instance to predict the label of each \"X\" in the \"test\" group\n",
+    "\n",
+    "resultspred = my_instance.predict(testX)\n",
     "#    B. Use your \"test\" labels to see if the predicted label is equal the true label\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -335,7 +439,6 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -351,7 +454,20 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "name": "Untitled.ipynb"
  },
